--- a/socketioTest.html
+++ b/socketioTest.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
   <head>
     <meta charset="UTF-8">
     <title>Test socketio</title>
@@ -7,94 +7,135 @@
   </head>
 
   <body>
-
+  <div>
+    <label for="username">Usuario</label><input type="text" id="username"/>
+    <label for="password">Contraseña</label><input type="text" id="password"/>
+    <button onclick="iniciarSesion()" >Iniciar Sesion</button>
+  </div>
+  <div>
+    <label for="idSala">ID Sala</label><input type="text" id="idSala"/>
     <button onclick="crearSala()" >Crear sala</button>
     <button onclick="unirseSala()" >Unirse sala</button>
     <button onclick="buscarSala()" >Buscar sala</button>
     <button onclick="abandonarSala()" >Abandonar sala</button>
     <button onclick="comenzarPartida()" >Comenzar partida</button>
     <button onclick="terminar()">Cerrar conexion </button>
-
     <script src="http://localhost:3000/socket.io/socket.io.js"> </script>
+  </div>
+<!--
+    <script src="http://unitests.herokuapp.com/socket.io/socket.io.js"> </script>
+    -->
     <script>
       let token;
       let conn = undefined;
       let sala = undefined;
 
-      let xhr = XMLHttpRequest(),
+      let xhr = new XMLHttpRequest(),
               method = 'GET',
+              partida = 'http://localhost:3000/api/partida',
+              //partida = 'http://unitests.herokuapp.com/api/partida',
+              //url = 'http://unitests.herokuapp.com/api/login';
               url = 'http://localhost:3000/api/login';
-      xhr.open(method, url, false); // sincrono
-      xhr.setRequestHeader("username", "test");
-      xhr.setRequestHeader("password", "test");
-      xhr.send();
-      token = xhr.responseText;
 
-      conn = io("http://localhost:3000/api/partida",{
-        extraHeaders:{
-          jwt: token,
-          operacion: "crearSala",
-          priv: "true"
-        }
-      });
+      function iniciarSesion() {
+        let usuario = document.getElementById('username').value,
+                pass = document.getElementById('password').value;
+        xhr.open(method, url, false); // sincrono
+        xhr.setRequestHeader("username", usuario);
+        xhr.setRequestHeader("password", pass);
+        xhr.send();
+        token = xhr.responseText;
+      }
 
-      conn.on("connect", ()=>{
+      function config(conn) {
+        conn.on("connect", () => {
+          console.assert(conn.conected != true, 'No conectado')
+          conn.emit("obtenerIdSala", (id) => {
+            console.assert(id !== '', 'Error obtener idSala');
+            sala = id;
+          });
 
-        conn.emit("obtenerIdSala", (id)=>{
-          console.assert(id !== '' , 'Error obtener idSala');
-          sala = id;
-        });
+        })
 
-      })
+        conn.on('cambioLider', ({antiguo, nuevo}) => {
+          console.log("Antiguo lider: " + antiguo + " Nuevo: " + nuevo);
+        })
 
-      conn.on('cambioLider', ({antiguo, nuevo})=>{
-        console.log("Antiguo lider: " + antiguo + " Nuevo: " + nuevo);
-      })
+        conn.on('abandonoSala', (user) => {
+          console.log("Abandona sala: " + user);
+        })
 
-      conn.on('abandonoSala', (user)=>{
-        console.log("Abandona sala: " + user);
-      })
+        conn.on('nuevoJugador', (user) => {
+          console.log("Entra en la sala: " + user);
+        })
 
-      conn.on('nuevoJugador', (user)=>{
-        console.log("Entra en la sala: " + user);
-      })
+        conn.on('cargarJugadores', (users) => {
+          console.log(users);
+        })
 
-      conn.on('cargarJugadores', (users) =>{
-        console.log(users);
-      })
+        conn.on('turno', (info) => {
+          console.log("Turno de: " + info);
+        })
 
-      conn.on('turno', (info) =>{
-        console.log("Turno de: " + info);
-      })
+        conn.on('comienzoPartida', () => {
+          console.log("Comienza la partida");
+        })
 
-      conn.on('comienzoPartida', () =>{
-        console.log("Comienza la partida");
-      })
+        conn.on('chat', ({user, msg}) => {
+          console.log("Mensaje: " + msg + " de " + user);
+        })
 
-      conn.on('chat', ({user, msg})=>{
-        console.log("Mensaje: " + msg + " de " + user);
-      })
+        conn.on('disconnect', (reason)=>{
+          console.log('Desconectado: '+ reason);
+        })
+      }
 
       function crearSala(){
-
+        if(conn !== undefined){return;}
+        conn = io(partida,{
+          extraHeaders:{
+            jwt: token,
+            operacion: "crearSala",
+            priv: "false"
+          }
+        });
+        config(conn);
       }
 
       function unirseSala(){
-
+        if(conn !== undefined){return;}
+        const idSala = document.getElementById('idSala').value;
+        conn = io(partida,{
+          extraHeaders:{
+            jwt: token,
+            operacion: "unirseSala",
+            idSala: idSala
+          }
+        });
+        config(conn);
       }
 
       function buscarSala(){
-
+        if(conn !== undefined){return;}
+        conn = io(partida,{
+          extraHeaders:{
+            jwt: token,
+            operacion: "buscarPartida"
+          }
+        });
+        config(conn);
       }
 
       function abandonarSala(){
         conn.emit("abandonarSala", (code)=>{
           console.log("Al abandonar sala: " + code.toString());
-        })
+        });
+
       }
 
       function terminar(){
         conn.close();
+        conn = undefined;
       }
 
       function comenzarPartida(){
