--- a/socketioTest.html
+++ b/socketioTest.html
@@ -109,7 +109,7 @@
           extraHeaders:{
             jwt: token,
             operacion: "unirseSala",
-            idSala: identificador
+            sala: identificador
           }
         });
         config(conn);
