--- a/socketioTest.html
+++ b/socketioTest.html
@@ -31,11 +31,11 @@
     <button onclick="abandonarPartida()">Abandonar Partida </button>
     <button onclick="terminar()">Cerrar conexion </button>
   </div>
-
-    <script src="http://localhost:3000/socket.io/socket.io.js"> </script>
   <!--
-  <script src="http://unitests.herokuapp.com/socket.io/socket.io.js"> </script>
-  -->
+      <script src="http://localhost:3000/socket.io/socket.io.js"> </script>
+      -->
+    <script src="http://unitrivia.herokuapp.com/socket.io/socket.io.js"> </script>
+
     <script>
       let token;
       let conn = undefined;
@@ -47,8 +47,8 @@
       let xhr = new XMLHttpRequest(),
               method = 'GET',
               //partida = 'http://localhost:3000/api/partida',
-              partida = 'http://unitests.herokuapp.com/api/partida',
-              url = 'http://unitests.herokuapp.com/api/login';
+              partida = 'http://unitrivia.herokuapp.com/api/partida',
+              url = 'http://unitrivia.herokuapp.com/api/login';
               //url = 'http://localhost:3000/api/login';
 
       function iniciarSesion() {
